# information_theory2026

./: .dockerignore  .gitignore  README.md  plot_history_from_worker_log.py  pyproject.toml  requirements.txt  run_experiment.sh  train_grokking.py
.runtime/clearml_cache/offline/offline-5a00a03ec62e43b08267c11e4847828c/: log.jsonl  metrics.jsonl  task.json
.runtime/clearml_cache/offline/offline-c56379697c604dfca9faa415635f4e2f/: log.jsonl  metrics.jsonl  task.json
.runtime/clearml_cache/offline/offline-f1cf9c5050f44dd5ab22e32785ce9e16/: log.jsonl  task.json
.runtime/matplotlib/: fontlist-v390.json
artifacts_smoke/: checkpoint_epoch_000001.pt  checkpoint_epoch_000002.pt
configs/: clearml_dataset_example.yaml  grokking_mod_prime_113.yaml  grokking_mod_prime_113_nodocker.yaml  smoke_test.yaml
docker/: Dockerfile.pytorch-cu117  README_DOCKER_SETUP.md  build_and_push.sh
hw/: lloyd_max.py
plots/: history_extracted.yaml
