[project]
name = "information-theory-grokking"
version = "0.1.0"
description = "Grokking experiment on modular arithmetic with ClearML logging"
requires-python = ">=3.11"
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu118/torch-2.5.1%2Bcu118-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "torch==2.5.1 ; sys_platform != 'win32' or python_version != '3.11'",
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
    "clearml>=1.16,<3",
    "pyyaml>=6.0,<7",
]

[tool.uv]
package = false
