[project]
name = "information-theory-grokking"
version = "0.1.0"
description = "Grokking experiment on modular arithmetic with ClearML logging"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "clearml>=1.16",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
